# saye

./: .env  DEVELOPER_GUIDE.md  INSTALLATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  USER_MANUAL.md  pyproject.toml
backend/src/: admin_api.py  main.py
backend/src/static/: index.html
backend/src/static/assets/: index-hoHGAeEO.css
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  Header.jsx  Lessons.jsx  Login.jsx  News.jsx  Sidebar.jsx  Users.jsx
telegram_bot/: .env.example  ai_chat.py  analytics_system.py  bot.py  bot_updated.py  database.py  database_updated.py  lessons.py  main_bot.py  news_system.py  notification_system.py  points_system.py  requirements.txt  shop_system.py
