[tool.poetry]
name = "saye"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
schedule = "^1.1.0"
python-telegram-bot = "^20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
